Staging changes before history rewrite

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 
 
+# application.properties
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
+kakao.client_id=d6041b9376c2f51ed92a4d81164f9552
+kakao.redirect_url=http://localhost:8080/kakao/callback
+kakao.auth_server_base_url=https://kauth.kakao.com
+kakao.resource_server_base_url=https://kapi.kakao.com
